--- a/public/404.html
+++ b/public/404.html
@@ -20,8 +20,7 @@
 </head>
 
 <body class="error-page">
-  <!-- This file lives in public/404.html -->
-    <img src="404.png">
+    <img src="404.png" alt="404">
     <h1>お探しのページは見つかりませんでした</h1>
     <a href="/">トップページ</a>
 </body>
